# primestuff

./: .gitignore  README.md  main.py  pyproject.toml  run.sh
Examples/Primes/: analyse_line_length.py  generate_3d_cube.py  generate_3d_cube_side_snapshots.py  generate_graph_dots.py  generate_img.py  generate_img_analyse_chars.py  primes_3d_cube.html  search_zero_white_box.py
Examples/Primes/nD_search/: search_nd_projection.py
src/primestuff/: __init__.py  primes.py
src/primewords/: __init__.py  primes.py
