[project]
name = "primestuff"
version = "0.1.0"
description = "Render prime graphs and generate prime visualisations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"numpy>=2.2.0",
	"pandas>=2.2.3",
	"pillow>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/primestuff"]
